build - Update target platform (#1502)
init named pipe

impl muti-thread and named pipe for buildServer