@@ -1,10 +1,7 @@
 package com.microsoft.gradle.bs.importer;
 
 import java.io.File;
-import java.io.IOException;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
+
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
@@ -17,7 +14,10 @@ import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Plugin;
 import org.eclipse.core.runtime.Status;
+//import org.eclipse.jdt.ls.core.internal.JavaLanguageServerPlugin;
 import org.eclipse.jdt.ls.core.internal.managers.DigestStore;
+
+
 import org.eclipse.lsp4j.jsonrpc.Launcher;
 import org.osgi.framework.BundleContext;
 
@@ -38,8 +38,6 @@ public class ImporterPlugin extends Plugin {
      */
     private DigestStore digestStore;
 
-    private static String bundleDirectory;
-
     private static String bundleVersion = "";
 
     @Override
@@ -52,7 +50,6 @@ public class ImporterPlugin extends Plugin {
         if (!bundleFile.isPresent()) {
            throw new IllegalStateException("Failed to get bundle location.");
         }
-        bundleDirectory = bundleFile.get().getParent();
     }
 
     @Override
@@ -75,83 +72,39 @@ public class ImporterPlugin extends Plugin {
         return instance.digestStore;
     }
 
+	// public static Object getBuildServerPort() {
+	// 	return JavaLanguageServerPlugin.getInstance().getClientConnection()
+	// 		.executeClientCommand("gradle.getBuildServerPort");
+
+	// }
+
     public static BuildServerConnection getBuildServerConnection(IPath rootPath) throws CoreException {
         Pair<BuildServerConnection, BuildClient> pair = instance.buildServers.get(rootPath);
         if (pair != null) {
             return pair.getLeft();
         }
+		try {
+			ClientNamedPipeStream pipeStream = new ClientNamedPipeStream();
 
-        String javaExecutablePath = getJavaExecutablePath();
-        String[] classpaths = getBuildServerClasspath();
+			BuildClient client = new GradleBuildClient();
+			Launcher<BuildServerConnection> launcher = new Launcher.Builder<BuildServerConnection>()
+					.setOutput(pipeStream.getOutputStream())
+					.setInput(pipeStream.getInputStream())
+					.setLocalService(client)
+					.setExecutorService(Executors.newCachedThreadPool())
+					.setRemoteInterface(BuildServerConnection.class)
+					.create();
 
-        String pluginPath = getBuildServerPluginPath();
+			launcher.startListening();
+			BuildServerConnection server = launcher.getRemoteProxy();
+			client.onConnectWithServer(server);
 
-        List<String> command = new ArrayList<>();
-        command.add(javaExecutablePath);
-        if (Boolean.parseBoolean(System.getenv("DEBUG_GRADLE_BUILD_SERVER"))) {
-            command.add("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8989");
-        }
-        command.add("--add-opens=java.base/java.lang=ALL-UNNAMED");
-        command.add("--add-opens=java.base/java.io=ALL-UNNAMED");
-        command.add("--add-opens=java.base/java.util=ALL-UNNAMED");
-        command.add("-Dplugin.dir=" + pluginPath);
-        command.add("-cp");
-        command.add(String.join(getClasspathSeparator(), classpaths));
-        command.add("com.microsoft.java.bs.core.Launcher");
+			instance.buildServers.put(rootPath, Pair.of(server, client));
+			return server;
+    	} catch (Exception e) {
+			e.printStackTrace();
+			throw new CoreException(new Status(IStatus.ERROR, PLUGIN_ID, "Failed to start build server.", e));
+		}
+	}
 
-        ProcessBuilder build = new ProcessBuilder(command);
-        try {
-            Process process = build.start();
-            BuildClient client = new GradleBuildClient();
-            Launcher<BuildServerConnection> launcher = new Launcher.Builder<BuildServerConnection>()
-                    .setOutput(process.getOutputStream())
-                    .setInput(process.getInputStream())
-                    .setLocalService(client)
-                    .setExecutorService(Executors.newCachedThreadPool())
-                    .setRemoteInterface(BuildServerConnection.class)
-                    .create();
-
-            launcher.startListening();
-            BuildServerConnection server = launcher.getRemoteProxy();
-            client.onConnectWithServer(server);
-            instance.buildServers.put(rootPath, Pair.of(server, client));
-            return server;
-        } catch (IOException e) {
-            throw new CoreException(new Status(IStatus.ERROR, PLUGIN_ID,
-                    "Failed to start build server.", e));
-        }
-    }
-
-    /**
-     * Get the Java executable used by JDT.LS, which will be higher than JDK 17.
-     */
-    private static String getJavaExecutablePath() {
-        Optional<String> command = ProcessHandle.current().info().command();
-        if (command.isPresent()) {
-            return command.get();
-        }
-
-        throw new IllegalStateException("Failed to get Java executable path.");
-    }
-
-    private static String[] getBuildServerClasspath() {
-        return new String[]{
-            Paths.get(bundleDirectory, "server.jar").toString(),
-            Paths.get(bundleDirectory, "runtime").toString() + File.separatorChar + "*"
-        };
-    }
-
-    private static String getBuildServerPluginPath() {
-        return Paths.get(bundleDirectory, "plugins").toString();
-    }
-
-    private static String getClasspathSeparator() {
-        String os = System.getProperty("os.name").toLowerCase();
-
-        if (os.contains("win")) {
-            return ";";
-        }
-
-        return ":"; // Linux or Mac
-    }
 }
